# schiphol-cop-workshop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/skills/adr/: SKILL.md
.github/skills/github/: SKILL.md
.github/skills/jira/: SKILL.md
data/: flights.json  gates.json
docs/adr/: 0001-python-stdlib-only.md  0002-module-split.md  0003-json-seed-data.md  0004-layered-copilot-instructions.md  0005-jira-keyed-git-workflow.md  0006-subcommand-cli.md  0007-repo-shipped-agent-skills.md  0008-city-filter-word-boundary-matching.md  README.md
docs/workshop/: 00-setup.md  01-participant-guide.md
docs/workshop/exercises/: README.md  exercise-1-bug-destination-filter.md  exercise-2-bug-stats-average.md  exercise-3-bug-gate-conflicts.md  exercise-4-feature-sort-flag.md  exercise-5-feature-export.md  exercise-6-feature-delay-report.md  stretch-a-gate-suggestions.md  stretch-b-peer-review.md
docs/workshop/facilitator/: runbook.md  slides-outline.md  solutions.md
scripts/: check-setup.sh  seed-github-issues.sh  seed-jira.sh
src/schiphol_ops/: __init__.py  __main__.py  board.py  cli.py  data.py  filters.py  gates.py  models.py  stats.py
tests/: conftest.py  test_board.py  test_cli.py  test_data.py  test_filters.py  test_gates.py  test_stats.py
tests/fixtures/: flights.json  gates.json
